--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
-import React, { useState } from 'react';
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chaos Store</title>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
+    <div id="root"></div>
+    <script type="text/babel">
+        const { useState } = React;
+      import React, { useState } from 'react';
 import { Send } from 'lucide-react';
 
 export default function ChaosOrderForm() {
@@ -131,3 +146,8 @@ export default function ChaosOrderForm() {
     </div>
   );
 }
+        
+        
+    </script>
+</body>
+</html>
