--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             setStatus('');
 
             try {
-              const response = await fetch('https://formspree.io/f/xvgdnakd', {
+              const response = await fetch('https://formspree.io/f/xzzozagr', {
                 method: 'POST',
                 headers: {
                   'Content-Type': 'application/json',
